// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render TagsList component  Component should render right with tags 1`] = `
<styled.div>
  <Card
    body={false}
  >
    <CardHeader>
      Last tags :
    </CardHeader>
    <ListGroup
      variant="flush"
    >
      <styled.div
        key="0"
      >
        <ListGroupItem
          action={true}
          active={false}
          as="span"
          disabled={false}
          onClick={[Function]}
        >
          Tag1
        </ListGroupItem>
        <Button
          active={false}
          as="button"
          disabled={false}
          onClick={[Function]}
          size="sm"
          variant="secondary"
        >
          delete
        </Button>
      </styled.div>
      <styled.div
        key="1"
      >
        <ListGroupItem
          action={true}
          active={false}
          as="span"
          disabled={false}
          onClick={[Function]}
        >
          Tag2
        </ListGroupItem>
        <Button
          active={false}
          as="button"
          disabled={false}
          onClick={[Function]}
          size="sm"
          variant="secondary"
        >
          delete
        </Button>
      </styled.div>
      <styled.div
        key="2"
      >
        <ListGroupItem
          action={true}
          active={false}
          as="span"
          disabled={false}
          onClick={[Function]}
        >
          Tag3
        </ListGroupItem>
        <Button
          active={false}
          as="button"
          disabled={false}
          onClick={[Function]}
          size="sm"
          variant="secondary"
        >
          delete
        </Button>
      </styled.div>
    </ListGroup>
  </Card>
</styled.div>
`;

exports[`Should render TagsList component  Component should render right without tags 1`] = `
<styled.div>
  <Card
    body={false}
  >
    <CardHeader>
      Last tags :
    </CardHeader>
    <ListGroup
      variant="flush"
    />
  </Card>
</styled.div>
`;
